--- a/index.html
+++ b/index.html
@@ -106,7 +106,11 @@
       <div class="banner">
         <div class="banner-content">
           <div class="logo-block">
-            <img src="banner.png" alt="AWS Cloud Clubs" class="banner-logo" />
+            <img
+              src="YOUR_LOGO_PATH"
+              alt="AWS Cloud Clubs"
+              class="banner-logo"
+            />
           </div>
         </div>
       </div>
@@ -466,7 +470,7 @@
             review your application and get back to you soon.
           </p>
           <a
-            href="https://chat.whatsapp.com/DDP6L6KfFSsBEGq450BKn8?mode=gi_t"
+            href="YOUR_WHATSAPP_GROUP_URL"
             target="_blank"
             rel="noopener noreferrer"
             class="whatsapp-link"
